test/expect/test-error.err
    エラー: test/test-error.ts
    | <description>
    |   tsc4wshのデバッグ用スクリプト
    | </description>
    | <named name="?" type="simple" required="false" helpstring="使い方(これ)を表示します。 />
      ^[error] element parse error
       [warning] attribute space is required"helpstring"!! 
    | <named name="base" type="string" required="true" helpstring="相対パスやワイルドカードの基準となるディレクトリ" />
    | <unnamed name="filename" many="true" required="true" helpstring="処理するファイル。ワイルドカード指定可。"/>
    | <example>
